# Effective-algorithms

./: CMakeLists.txt  LICENSE.txt  README.md
include/: algorithms.hpp  bruteForce.hpp  menu.hpp  util.hpp
src/: algorithms.cpp  bruteForce.cpp  dynamicProgramming.cpp  geneticAlgorithm.cpp  main.cpp  menu.cpp  simulatedAnnealing.cpp  tabuSearch.cpp  util.cpp
